fixed double scroll (lessons)

--- a/main.css
+++ b/main.css
@@ -190,7 +190,6 @@ body {
   width: 100%;
   overflow-y: hidden;
   z-index: -5;
-  overflow-x: hidden;
 }
 
 .lessonscontainer {
